--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
 <video autoplay muted loop id="myVideo">
-  <source src="C:\Users\JSton\OneDrive\Desktop\HTML\CSGOBackgroundVideo.mp4" type="video/mp4">
+  <source src="CSGOBackgroundVideo.mp4" type="video/mp4">
   Your browser does not support HTML5 video.
 </video>
 
