--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
 <div class="content">
 
-  <h1>Fitness</h1>
-  <h2>The lead brand in fitness items</h2>
+  <h1>Elemental</h1>
+  <h2>Wag wan piffting ;)</h2>
 </div>
 
 <script>
