--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
 
 <div class="header">
   <div class="header-right">
-    <a  href="https://steamcommunity.com/id/EleMental-/">Steam</a>
-    <a href="https://twitter.com/EleMentalCSGO">Twitter</a>
-    <a href="https://discord.gg/PTYdTeq">GGX Discord</a>
+    <a href="https://steamcommunity.com/id/EleMental-/">
+	<img src="SteamLogo.svg" alt="Steam" width="60" height="60"></a>
+    <a href="https://twitter.com/EleMentalCSGO">
+	<img src="TwitterLogo.svg"  alt="Twitter" width="60" height="60"></a>
+    <a href="https://www.youtube.com/killerstrength">
+	<img  src="YoutubeLogo.svg" alt="Youtube" width="60" height="60"></a>
+	<a href="https://discord.gg/W5ak9W">
+	<img src="DiscordLogo.svg" alt="Discord" width="60" height="60"></a>
   </div>
 </div>
 
